Merging patch by bz (from mozilla/htmlparser). ReadWhitespace should convert lone \r to \r\n so callers see it as a newline. Bug 103833, r=choess, sr=peterv